--- a/Principal.html
+++ b/Principal.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +11,9 @@
 </head>
 
 <body>
-
+    <table>
+        aqui debe ir cositas
+    </table>
 </body>
 
 </html>
