--- a/Principal.html
+++ b/Principal.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css"> <!--Colocar acceso a Bootstrap css-->
+
     <title>Document</title>
 </head>
 
@@ -14,6 +13,13 @@
     <table>
         aqui debe ir cositas
     </table>
+
+
+
+
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script> <!--Colocar acceso a Bootstrap Js-->
 </body>
+
+
 
 </html>
