--- a/index.html
+++ b/index.html
@@ -4,19 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css"> <!--Colocar acceso a Bootstrap css-->
+    <!--Colocar acceso a Bootstrap css-->
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
-    <title>Document</title>
+    <title>index</title>
 </head>
 
 <body>
-    <table>
-        <h1>aqui debe ir cositas</h1>
-    </table>
+    <!--
+
+    
+    <nav>
+
+        <ul class="MenuLista">
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="acercaDeNosotros.html">ACERCA DE NOSOTROS</a></li>
+            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a href="rutas.html">RUTAS</a></li>
+            <li class="posicionLogin"> <a href="ingreso.html">LOGIN</a></li>
+        </ul>
+
+    </nav>
+    -->
+    <div class="container my-3">
+        <div>
+
+
+            <h1 class="display-3">Tutorias UNIMINUTO</h1>
+            <p class="texto-justificado">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat nulla esse magni autem
+                asperiores
+                omnis doloribus vel velit maiores nisi, dolores unde quisquam quod molestias rerum. Perferendis,
+                voluptatibus dicta.
+            </p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Aprende mas</a>
+            </p>
+        </div>
+        <div class="row text-center">
+            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Docente 1 </h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum
+                            tempora perferendis praesentium autem, veritatis maxime recusandae nulla natus aliquam? Quod
+                            esse quae possimus, natus mollitia eius ea doloremque magni.</p>
+                        <a href="#" class="btn btn-info">Informacion</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Docente 2 </h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum
+                            tempora perferendis praesentium autem, veritatis maxime recusandae nulla natus aliquam? Quod
+                            esse quae possimus, natus mollitia eius ea doloremque magni.</p>
+                        <a href="#" class="btn btn-info">Informacion</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Docente 3 </h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum
+                            tempora perferendis praesentium autem, veritatis maxime recusandae nulla natus aliquam? Quod
+                            esse quae possimus, natus mollitia eius ea doloremque magni.</p>
+                        <a href="#" class="btn btn-info">Informacion</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row aling-items-center">
+            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <img src="Img/LogoMDD.png" class="img-fluid" alt="imagen del logo universidad">
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <h1 class="display-3">Uniminuto Informacion</h1>
+                <p class="texto-justificado">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sed mollitia, dolorum est aperiam
+                    iure quas nisi repudiandae illum commodi accusantium aspernatur tenetur laudantium culpa, officia
+                    incidunt nam et voluptatibus aut iste eos eum distinctio. Distinctio consequuntur veritatis, eaque
+                    maxime nobis porro. Doloribus nostrum dolorum adipisci quasi voluptatum excepturi eligendi quidem
+                    aperiam, tempora quaerat rem? Nesciunt, eligendi doloremque! Libero vero quasi eligendi magni non
+                    sequi similique perferendis nam distinctio iste esse rem pariatur hic, nesciunt accusamus aliquam
+                    consequatur maxime, quia odio ut assumenda dolorum totam illo quod? Corporis, maiores molestias
+                    excepturi corrupti dicta aperiam, architecto veniam repellat veritatis eius reiciendis?
+                </p>
+            </div>
+
+
+        </div>
+    </div>
 
 
 
 
+    <!--Colocar acceso a Bootstrap css-->
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script> <!--Colocar acceso a Bootstrap Js-->
 </body>
 
