--- a/index.html
+++ b/index.html
@@ -12,21 +12,29 @@
 </head>
 
 <body>
-    <!--
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">TutorMinu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
 
-    
-    <nav>
-
-        <ul class="MenuLista">
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="acercaDeNosotros.html">ACERCA DE NOSOTROS</a></li>
-            <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a href="rutas.html">RUTAS</a></li>
-            <li class="posicionLogin"> <a href="ingreso.html">LOGIN</a></li>
-        </ul>
-
+                </ul>
+            </div>
+        </div>
     </nav>
-    -->
     <div class="container my-3">
         <div>
 
@@ -78,7 +86,7 @@
             </div>
         </div>
         <div class="row aling-items-center">
-            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <img src="Img/LogoMDD.png" class="img-fluid" alt="imagen del logo universidad">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -94,16 +102,49 @@
                     excepturi corrupti dicta aperiam, architecto veniam repellat veritatis eius reiciendis?
                 </p>
             </div>
+        </div>
+        <div class="row aling-items-center">
+            <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 mt-3">
+                <form>
+                    <div class="mb-2">
+                        <label for="txtEmail" class="form-label">Direccion de correo</label>
+                        <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp" />
+                        <div id="emailHelp" class="form-text">we ll never share your email with anyone else</div>
+                    </div>
+                    <div class="mb-2">
+                        <label for="txtEmail" class="form-label">Comentarios</label>
+                        <textarea class="form-control" id="txtComment" rows="7"></textarea>
+                    </div>
+                </form>
 
+            </div>
 
+            <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9 mt-3">
+
+                <img src="Img/Horario.png" class="img-fluid" alt="imagen del horario">
+            </div>
+        </div>
+        <div class="row">
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">about</a></li>
+                </ul>
+                <p class="text-center text-muted">UNIMINUTO <br><span id="currentDateAll"></span></p>
+
+            </footer>
         </div>
     </div>
 
 
 
 
-    <!--Colocar acceso a Bootstrap css-->
+
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script> <!--Colocar acceso a Bootstrap Js-->
+
+    <!--Colocar acceso a Js-Proyecto-->
+    <script src="Js-Proyecto/main.js"></script>
 </body>
 
 
